--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en"
 title                    : "Songtao Shi"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Songtao Shi"
+description              : "cs undergraduate student in njust"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
