--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,10 @@ title                    : "Songtao Shi"
 title_separator          : "-"
 name                     : "Songtao Shi"
 description              : "cs undergraduate student in njust"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : “https://songtaoshi.xyz"
+# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : “/blog”
+# the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
