--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en"
 title                    : "Songtao Shi"
 title_separator          : "-"
-name                     : "Songtao Shi"
+name                     : "Songtao"
 description              : "perspnal homepage"
 url                      : "https://songtaoshi.xyz"
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
