--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
-
+remote_theme: "mmistakes/minimal-mistakes"
+plugins:
+  - jekyll-remote-theme
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -16,7 +18,6 @@ description              : "perspnal homepage"
 url                      : "https://songtaoshi.xyz"
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-=======
 description              : "cs undergraduate student in njust"
 url                      : “https://songtaoshi.xyz"
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
